first pass at entire page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>Discover hidden places around you</h1>
     <a href="https://4bufmgsrj4e1vbl02spfeuula82uiqjk892sgfh9qe07op80p870.codecademy.cloud/#">
       Download Excursion (Coming Soon)</a>
+      <p><img src="./resources/video/excursion.mp4" alt="a phone with scenic video!"></p>
+      <h1>Your personal travel guide</h1>
+      <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src="./resources/images/camp.jpg"></p>
+      <p><img src="./resources/images/phone.png"></p>
   </body>
 </html>
