--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   </head>
   <body>
     <h1>Discover hidden places around you</h1>
-    <a href="https://4bufmgsrj4e1vbl02spfeuula82uiqjk892sgfh9qe07op80p870.codecademy.cloud/#">
-      Download Excursion (Coming Soon)</a>
-      <p><img src="./resources/video/excursion.mp4" alt="a phone with scenic video!"></p>
+
+      <p><video src="./resources/video/excursion.mp4" alt="a phone with scenic video!" type="video/mp4"></p>
       <h1>Your personal travel guide</h1>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p><img src="./resources/images/camp.jpg"></p>
       <p><img src="./resources/images/phone.png"></p>
+      <h1>Coming soon for iPhone and Android!</h1>
+      <a href="https://4bufmgsrj4e1vbl02spfeuula82uiqjk892sgfh9qe07op80p870.codecademy.cloud/#">
+        Download Excursion (Coming Soon)</a>
+      <p #copyright> &copy; Excursion </p>
   </body>
 </html>
