--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <body>
     <h1>Discover hidden places around you</h1>
 
-      <p><video src="./resources/video/excursion.mp4" alt="a phone with scenic video!" type="video/mp4"></p>
+      <p><video autoplay loop>
+        <source src="./resources/video/excursion.mp4" type="video/mp4">
+        Your browser does not support video.
+        </video>
+      </p>
       <h1>Your personal travel guide</h1>
       <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
       <p><img src="./resources/images/camp.jpg"></p>
@@ -16,6 +20,6 @@
       <h1>Coming soon for iPhone and Android!</h1>
       <a href="https://4bufmgsrj4e1vbl02spfeuula82uiqjk892sgfh9qe07op80p870.codecademy.cloud/#">
         Download Excursion (Coming Soon)</a>
-      <p #copyright> &copy; Excursion </p>
+      <p id=copyright> &copy; Excursion </p>
   </body>
 </html>
